Make certain it works under java 8
Signed-off-by: Taylor Smock <taylor.smock@kaartgroup.com>